# feedbackbot

./: LICENSE  README.md  README_RU.md  pyproject.toml
bot/: __init__.py  constants.py  main.py  settings.py  utils.py
bot/handlers/: default.py
bot/logic/: callbacks.py  handlers.py
config/: .env.template
